--- a/web/pom.xml
+++ b/web/pom.xml
@@ -14,6 +14,11 @@
     <name>Sprockets Java Web Appp</name>
     <dependencies>
         <dependency>
+            <groupId>org.mvnsearch.sprockets</groupId>
+            <artifactId>sprockets-client</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
