--- a/client/pom.xml
+++ b/client/pom.xml
@@ -7,7 +7,9 @@
     <version>1.0.0-SNAPSHOT</version>
     <name>Sprockets Java Client</name>
     <description>
-        Sprockets-Java is a Java library that preprocesses and concatenates JavaScript source files
+        Sprockets-Java is a Java library that preprocesses and concatenates JavaScript source files.
+        If you want to use YUI Compressor, please download YUI compressor from http://yuilibrary.com/downloads/#yuicompressor
+        and extract yuicompressor-2.4.6.jar to WEB-INF/lib. It is a classloader bug in YUI Compressor.
     </description>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
